--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="w-full h-full">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Technical test</title>
 </head>
-<body class="bg-blue-50">
-    <div id="root"></div>
+<body class="bg-blue-50 w-full h-full">
+    <div id="root" class="h-full w-full"></div>
     <script type="module" src="./index.jsx"></script>
 </body>
 </html>
